[gd_scene load_steps=40 format=2]

[ext_resource path="res://Fonts/D-DIN-Bold.otf" type="DynamicFontData" id=1]
[ext_resource path="res://Sounds/UI/click_2.wav" type="AudioStream" id=2]
[ext_resource path="res://Scripts/MenuRoot.gd" type="Script" id=3]
[ext_resource path="res://Textures/UI/close-circle.png" type="Texture" id=4]
[ext_resource path="res://Textures/UI/play.png" type="Texture" id=5]
[ext_resource path="res://Textures/UI/arrow-left-bold.png" type="Texture" id=6]
[ext_resource path="res://Textures/UI/nopreview.png" type="Texture" id=7]
[ext_resource path="res://Textures/UI/check-circle.png" type="Texture" id=8]
[ext_resource path="res://Textures/UI/cog.png" type="Texture" id=9]
[ext_resource path="res://Textures/UI/text-box.png" type="Texture" id=10]
[ext_resource path="res://Textures/UI/grid.png" type="Texture" id=11]
[ext_resource path="res://Textures/UI/st_logo.png" type="Texture" id=12]


[sub_resource type="DynamicFont" id=1]
size = 18
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 32
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 48
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 32
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 32
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=6]
size = 32
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=7]
size = 36
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=8]
size = 18
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=9]
size = 20
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=10]
size = 28
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=11]
size = 20
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=12]
size = 26
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=13]
bg_color = Color( 1, 0.796078, 0, 0.352941 )

[sub_resource type="StyleBoxFlat" id=14]
bg_color = Color( 0.054902, 1, 0, 0.301961 )

[sub_resource type="StyleBoxFlat" id=15]
bg_color = Color( 1, 0, 0, 0.298039 )

[sub_resource type="DynamicFont" id=16]
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=17]
size = 12
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=18]
size = 26
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=19]
size = 42
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=20]
size = 24
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=21]
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=22]
bg_color = Color( 0.0588235, 0.0588235, 0.0588235, 0.619608 )

[sub_resource type="StyleBoxFlat" id=23]
bg_color = Color( 0.141176, 0.133333, 0.152941, 1 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 0.227451, 0.0196078, 0.0196078, 1 )
border_blend = true

[sub_resource type="StyleBoxFlat" id=24]
bg_color = Color( 0.227451, 0.0196078, 0.0196078, 1 )

[sub_resource type="DynamicFont" id=25]
size = 32
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=26]
size = 42
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=27]
size = 46
use_filter = true
font_data = ExtResource( 1 )

[node name="MenuRoot" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -4.74914
margin_right = -4.74915
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 0.156863, 0.152941, 0.223529, 0.32549 )
position = Vector2( 800, 450 )
texture = ExtResource( 11 )
region_enabled = true
region_rect = Rect2( 0, 0, 3200, 1800 )
__meta__ = {
"_edit_lock_": true
}

[node name="MainMenu" type="Control" parent="."]
margin_right = 1600.0
margin_bottom = 900.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="MainMenu"]
position = Vector2( 792.96, 94.7981 )
scale = Vector2( 0.599441, 0.599441 )
texture = ExtResource( 12 )

[node name="VersionText" type="Label" parent="MainMenu"]
margin_left = -2.0
margin_top = 171.0
margin_right = 1602.0
margin_bottom = 220.0
custom_fonts/font = SubResource( 1 )
text = "Version 0.0.0.0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="MainMenu"]
margin_left = 598.0
margin_top = 275.0
margin_right = 995.0
margin_bottom = 329.0
custom_fonts/font = SubResource( 2 )
text = "Play"
icon = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="MainMenu"]
margin_left = 598.0
margin_top = 470.0
margin_right = 995.0
margin_bottom = 524.0
custom_fonts/font = SubResource( 2 )
text = "Exit"
icon = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Settings" type="Button" parent="MainMenu"]
margin_left = 598.0
margin_top = 340.0
margin_right = 995.0
margin_bottom = 394.0
custom_fonts/font = SubResource( 2 )
text = "Settings"
icon = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button5" type="Button" parent="MainMenu"]
margin_left = 598.0
margin_top = 405.0
margin_right = 995.0
margin_bottom = 459.0
custom_fonts/font = SubResource( 2 )
text = "Credits"
icon = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WorldSelect" type="Control" parent="."]
visible = false
margin_left = 1.36035
margin_top = 1.36035
margin_right = 1601.36
margin_bottom = 901.36
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="WorldSelect"]
margin_left = -2.0
margin_top = 79.0
margin_right = 1602.0
margin_bottom = 128.0
custom_fonts/font = SubResource( 3 )
text = "World Select"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button3" type="Button" parent="WorldSelect"]
margin_left = 18.2542
margin_top = 26.0514
margin_right = 209.254
margin_bottom = 80.0514
custom_fonts/font = SubResource( 2 )
text = "Back"
icon = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TabContainer" type="TabContainer" parent="WorldSelect"]
margin_left = 81.6396
margin_top = 193.64
margin_right = 1516.64
margin_bottom = 831.64
custom_fonts/font = SubResource( 4 )
tab_align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Load World" type="Control" parent="WorldSelect/TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 51.0
margin_right = -4.0
margin_bottom = -4.0

[node name="ItemList" type="ItemList" parent="WorldSelect/TabContainer/Load World"]
margin_left = 16.0
margin_top = 16.0
margin_right = 398.0
margin_bottom = 508.0
custom_fonts/font = SubResource( 5 )
fixed_icon_size = Vector2( 32, 32 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="WorldSelect/TabContainer/Load World"]
margin_left = 416.292
margin_top = 16.0
margin_right = 1407.29
margin_bottom = 562.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayButton" type="Button" parent="WorldSelect/TabContainer/Load World/Panel"]
modulate = Color( 0.541176, 1, 0.588235, 1 )
margin_left = 521.0
margin_top = 437.0
margin_right = 885.0
margin_bottom = 493.0
custom_fonts/font = SubResource( 6 )
text = "Play World0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DeleteButton" type="Button" parent="WorldSelect/TabContainer/Load World/Panel"]
modulate = Color( 0.870588, 0.360784, 0.360784, 1 )
margin_left = 899.0
margin_top = 437.0
margin_right = 947.0
margin_bottom = 493.0
custom_fonts/font = SubResource( 6 )
icon = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="WorldSelect/TabContainer/Load World/Panel"]
margin_left = 38.6013
margin_top = 50.6478
margin_right = 482.601
margin_bottom = 494.648
texture = ExtResource( 7 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WorldTitle" type="Label" parent="WorldSelect/TabContainer/Load World/Panel"]
margin_left = 521.492
margin_top = 52.9362
margin_right = 924.492
margin_bottom = 85.9362
custom_fonts/font = SubResource( 7 )
text = "World0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CreatedDate" type="Label" parent="WorldSelect/TabContainer/Load World/Panel"]
margin_left = 521.0
margin_top = 100.0
margin_right = 924.0
margin_bottom = 119.0
custom_fonts/font = SubResource( 8 )
text = "Created on 0/0/0000"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MapSize" type="Label" parent="WorldSelect/TabContainer/Load World/Panel"]
margin_left = 521.0
margin_top = 389.0
margin_right = 924.0
margin_bottom = 408.0
custom_fonts/font = SubResource( 8 )
text = "Map Size: 0x0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Description" type="Label" parent="WorldSelect/TabContainer/Load World/Panel"]
margin_left = 520.0
margin_top = 157.0
margin_right = 945.0
margin_bottom = 376.0
custom_fonts/font = SubResource( 9 )
text = "Description:

No description available."
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelCover" type="Panel" parent="WorldSelect/TabContainer/Load World"]
margin_left = 416.292
margin_top = 16.0
margin_right = 1407.29
margin_bottom = 562.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WorldTitle" type="Label" parent="WorldSelect/TabContainer/Load World/PanelCover"]
modulate = Color( 1, 1, 1, 0.231373 )
anchor_left = 0.2
anchor_top = 0.2
anchor_right = 0.8
anchor_bottom = 0.8
margin_left = -0.199615
margin_top = -0.200005
margin_bottom = 0.199982
custom_fonts/font = SubResource( 7 )
text = "No world selected. Please select a saved world from the list on the right."
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DeleteAllButton" type="Button" parent="WorldSelect/TabContainer/Load World"]
modulate = Color( 0.870588, 0.360784, 0.360784, 1 )
margin_left = 16.0
margin_top = 520.0
margin_right = 398.0
margin_bottom = 562.0
custom_fonts/font = SubResource( 10 )
text = "Delete All Saves"
icon = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Create New World" type="Control" parent="WorldSelect/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 51.0
margin_right = -4.0
margin_bottom = -4.0

[node name="Name" type="LineEdit" parent="WorldSelect/TabContainer/Create New World"]
margin_left = 184.0
margin_top = 39.0
margin_right = 643.0
margin_bottom = 88.0
custom_fonts/font = SubResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Description" type="TextEdit" parent="WorldSelect/TabContainer/Create New World"]
margin_left = 184.0
margin_top = 115.0
margin_right = 643.0
margin_bottom = 338.0
custom_fonts/font = SubResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="WorldSelect/TabContainer/Create New World"]
margin_left = 35.829
margin_top = 130.136
margin_right = 165.829
margin_bottom = 157.136
custom_fonts/font = SubResource( 12 )
text = "Description:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="WorldSelect/TabContainer/Create New World"]
margin_left = 62.1725
margin_top = 370.098
margin_right = 164.173
margin_bottom = 397.098
custom_fonts/font = SubResource( 12 )
text = "Map Size:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="WorldSelect/TabContainer/Create New World"]
margin_left = 322.0
margin_top = 379.0
margin_right = 415.0
margin_bottom = 393.0
custom_styles/panel = SubResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel3" type="Panel" parent="WorldSelect/TabContainer/Create New World"]
margin_left = 182.0
margin_top = 379.0
margin_right = 322.0
margin_bottom = 393.0
custom_styles/panel = SubResource( 14 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel2" type="Panel" parent="WorldSelect/TabContainer/Create New World"]
margin_left = 415.0
margin_top = 379.0
margin_right = 644.0
margin_bottom = 393.0
custom_styles/panel = SubResource( 15 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SizeLabel" type="Label" parent="WorldSelect/TabContainer/Create New World"]
margin_left = 421.0
margin_top = 398.0
margin_right = 641.0
margin_bottom = 415.0
custom_fonts/font = SubResource( 16 )
text = "128x128"
align = 2
max_lines_visible = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="WorldSelect/TabContainer/Create New World"]
margin_left = 187.0
margin_top = 413.0
margin_right = 641.0
margin_bottom = 442.0
custom_fonts/font = SubResource( 17 )
text = "No chunk system is present in this build of the game, so large maps will result in heavy lag and/or crashes. Do not go over 1024x1024 with intent to play on this size of map."
align = 2
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Size" type="HSlider" parent="WorldSelect/TabContainer/Create New World"]
margin_left = 183.0
margin_top = 363.0
margin_right = 643.0
margin_bottom = 410.0
min_value = 128.0
max_value = 2048.0
step = 128.0
value = 128.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label4" type="Label" parent="WorldSelect/TabContainer/Create New World"]
margin_left = 27.4555
margin_top = 39.8613
margin_right = 174.455
margin_bottom = 88.8613
custom_fonts/font = SubResource( 18 )
text = "World Name:"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="WorldSelect/TabContainer/Create New World"]
margin_left = 38.0
margin_top = 465.0
margin_right = 642.0
margin_bottom = 542.0
custom_fonts/font = SubResource( 19 )
text = "Create World"
icon = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tree" type="Tree" parent="WorldSelect/TabContainer/Create New World"]
margin_left = 663.0
margin_top = 39.0
margin_right = 1385.0
margin_bottom = 542.0
custom_fonts/title_button_font = SubResource( 20 )
custom_fonts/font = SubResource( 21 )
columns = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DeleteAllPopup" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="BG" type="Panel" parent="DeleteAllPopup"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 22 )

[node name="Main" type="Panel" parent="DeleteAllPopup"]
anchor_left = 0.3
anchor_top = 0.3
anchor_right = 0.7
anchor_bottom = 0.7
custom_styles/panel = SubResource( 23 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Topbar" type="Panel" parent="DeleteAllPopup/Main"]
anchor_right = 1.0
anchor_bottom = 0.1
custom_styles/panel = SubResource( 24 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="DeleteAllPopup/Main/Topbar"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 25 )
custom_colors/font_color = Color( 1, 1, 1, 0.92549 )
text = "WARNING:"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="DeleteAllPopup/Main"]
modulate = Color( 1, 1, 1, 0.709804 )
anchor_left = 0.05
anchor_top = 0.15
anchor_right = 0.95
anchor_bottom = 0.634
custom_fonts/font = SubResource( 26 )
text = "You are about to delete all save files. Are you sure? This action cannot be undone."
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Yes" type="Button" parent="DeleteAllPopup/Main"]
margin_left = 39.1909
margin_top = 232.13
margin_right = 291.191
margin_bottom = 309.13
custom_fonts/font = SubResource( 27 )
custom_colors/font_color = Color( 0.654902, 1, 0.627451, 1 )
text = "Yes"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="No" type="Button" parent="DeleteAllPopup/Main"]
margin_left = 346.191
margin_top = 232.13
margin_right = 598.191
margin_bottom = 309.13
custom_fonts/font = SubResource( 27 )
custom_colors/font_color = Color( 1, 0.666667, 0.666667, 1 )
text = "No"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DeleteOnePopup" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="BG" type="Panel" parent="DeleteOnePopup"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 22 )

[node name="Main" type="Panel" parent="DeleteOnePopup"]
anchor_left = 0.3
anchor_top = 0.3
anchor_right = 0.7
anchor_bottom = 0.7
custom_styles/panel = SubResource( 23 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Topbar" type="Panel" parent="DeleteOnePopup/Main"]
anchor_right = 1.0
anchor_bottom = 0.1
custom_styles/panel = SubResource( 24 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="DeleteOnePopup/Main/Topbar"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 25 )
custom_colors/font_color = Color( 1, 1, 1, 0.92549 )
text = "WARNING:"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="DeleteOnePopup/Main"]
modulate = Color( 1, 1, 1, 0.709804 )
anchor_left = 0.05
anchor_top = 0.15
anchor_right = 0.95
anchor_bottom = 0.634
custom_fonts/font = SubResource( 26 )
text = "You are about to delete the save: \"\". Are you sure?"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Yes" type="Button" parent="DeleteOnePopup/Main"]
margin_left = 39.1909
margin_top = 232.13
margin_right = 291.191
margin_bottom = 309.13
custom_fonts/font = SubResource( 27 )
custom_colors/font_color = Color( 0.654902, 1, 0.627451, 1 )
text = "Yes"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="No" type="Button" parent="DeleteOnePopup/Main"]
margin_left = 346.191
margin_top = 232.13
margin_right = 598.191
margin_bottom = 309.13
custom_fonts/font = SubResource( 27 )
custom_colors/font_color = Color( 1, 0.666667, 0.666667, 1 )
text = "No"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Click" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
[connection signal="pressed" from="MainMenu/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="MainMenu/Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="MainMenu/Settings" to="." method="_on_Settings_pressed"]
[connection signal="pressed" from="MainMenu/Button5" to="." method="_on_Button5_pressed"]
[connection signal="pressed" from="WorldSelect/Button3" to="." method="_on_Button3_pressed"]
[connection signal="item_selected" from="WorldSelect/TabContainer/Load World/ItemList" to="." method="_on_ItemList_item_selected"]
[connection signal="pressed" from="WorldSelect/TabContainer/Load World/Panel/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="WorldSelect/TabContainer/Load World/Panel/DeleteButton" to="." method="_on_DeleteButton_pressed"]
[connection signal="pressed" from="WorldSelect/TabContainer/Load World/DeleteAllButton" to="." method="_on_DeleteAllButton_pressed"]
[connection signal="value_changed" from="WorldSelect/TabContainer/Create New World/Size" to="." method="_on_Size_value_changed"]
[connection signal="pressed" from="WorldSelect/TabContainer/Create New World/Button" to="." method="_on_Create_pressed"]
[connection signal="pressed" from="DeleteAllPopup/Main/Yes" to="." method="_on_YesAll_pressed"]
[connection signal="pressed" from="DeleteAllPopup/Main/No" to="." method="_on_No_pressed"]
[connection signal="pressed" from="DeleteOnePopup/Main/Yes" to="." method="_on_YesOne_pressed"]
[connection signal="pressed" from="DeleteOnePopup/Main/No" to="." method="_on_No_pressed"]
